# reDrover

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/redrover-config/: Cargo.toml
crates/redrover-config/src/: lib.rs  proxy.rs  udp.rs
crates/redrover-gui/: Cargo.toml  build.rs
crates/redrover-gui/src/: app.rs  discord.rs  install.rs  main.rs  view.rs
dll/: CMakeLists.txt  README.md
dll/src/: config.cpp  config.h  discord_dirs.cpp  discord_dirs.h  dllmain.cpp  exports.cpp  hooks.cpp  hooks.h  logging.cpp  logging.h  platform.cpp  platform.h  posix_preload.cpp  proxy_value.cpp  proxy_value.h  real_io.cpp  real_io.h  socket_manager.cpp  socket_manager.h  socks5_udp.cpp  socks5_udp.h  udp_strategy.cpp  udp_strategy.h  version.rc.in
docs/: ARCHITECTURE.md  BUILDING.md  ISSUE-65-IDEAS.md  PORTING.md  ROADMAP.md
scripts/: build.cmd  build.ps1  build.sh
