[package]
name = "redrover-config"
description = "Shared drover.ini types and parser for Redrover"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
rust-ini.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
