[package]
name = "redrover-gui"
description = "Iced-based installer GUI for reDrover"
build = "build.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "reDrover"
path = "src/main.rs"

[dependencies]
redrover-config.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
iced.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
ProductName = "reDrover"
FileDescription = "reDrover Discord proxy installer"
OriginalFilename = "reDrover.exe"
LegalCopyright = "MIT"
